--- a/project.yml
+++ b/project.yml
@@ -7,6 +7,13 @@ options:
   indentWidth: 2
   tabWidth: 2
   generateEmptyDirectories: true
+packages:
+  RxSwift:
+    url: https://github.com/ReactiveX/RxSwift
+    majorVersion: 5.0.0
+  SnapKit:
+    url: https://github.com/SnapKit/SnapKit
+    majorVersion: 5.0.0
 targets:
   RxFormsExample:
     type: application
@@ -24,15 +31,17 @@ targets:
         - RxFormsTests
       gatherCoverageData: true
     dependencies:
-      - carthage: RxSwift
-      - carthage: RxCocoa
-      - carthage: RxRelay
+      - package: RxSwift
+      - package: RxSwift
+        product: RxCocoa
+      - package: RxSwift
+        product: RxRelay
       - carthage: MDFInternationalization
       - carthage: MDFTextAccessibility
       - carthage: MaterialComponents
       - carthage: MotionAnimator
       - carthage: MotionInterchange
-      - carthage: SnapKit
+      - package: SnapKit
     info:
       path: RxFormsExample/Info.plist
       properties:
@@ -68,14 +77,25 @@ targets:
       properties:
         CFBundleIdentifier: com.RxSwift.RxForms
     dependencies:
-      - carthage: RxSwift
-      - carthage: RxCocoa
-      - carthage: RxRelay
+      - package: RxSwift
+        product: RxSwift
+        weak: true
+      - package: RxSwift
+        product: RxCocoa
+        weak: true
+      - package: RxSwift
+        product: RxRelay
+        weak: true
       - carthage: MDFInternationalization
+        weak: true
       - carthage: MDFTextAccessibility
+        weak: true
       - carthage: MaterialComponents
+        weak: true
       - carthage: MotionAnimator
+        weak: true
       - carthage: MotionInterchange
+        weak: true
   RxFormsTests:
     type: bundle.unit-test
     platform: iOS
@@ -85,9 +105,11 @@ targets:
       - path: Tests
     dependencies:
       - target: RxForms
-      - carthage: RxSwift
-      - carthage: RxTest
-      - carthage: RxBlocking
+      - package: RxSwift
+      - package: RxSwift
+        product: RxTest
+      - package: RxSwift
+        product: RxBlocking
       - carthage: Quick
       - carthage: Nimble
       - carthage: SwiftyPrototype
